--- a/styles/gradle-manager.less
+++ b/styles/gradle-manager.less
@@ -33,29 +33,36 @@ ul {
 .left-pane{
   height: 100%;
   width: 200px;
+  min-width: 200px;
   display: flex;
-  flex-direction: column;
-  .title-bar{
-    border: 1px solid #000000;
-    font-size: 16px;
-    color:@text-color;
-    margin: 1px;
-    margin-bottom: 0;
-    background: @tab-bar-background-color;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-align: center;
-  }
-  .task-container{
+  flex-direction: row;
+  .resize-handle {
+    width: 3px;
     height: 100%;
-    border: 1px solid #000000;
-    border-top: 0;
-    font-size: 12px;
-    color:@text-color;
-    margin: 1px;
-    margin-top: 0;
-    overflow: auto;
-    background-color: @inset-panel-background-color;
+    background: #000;
+    cursor: ew-resize;
+  }
+  .left-container{
+    width: 100%;
+    .title-bar{
+      border-bottom: 1px solid #000000;
+      font-size: 16px;
+      color:@text-color;
+      background: @tab-bar-background-color;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      text-align: center;
+    }
+    .task-container{
+      height: 100%;
+      border-bottom: 1px solid #000000;
+      font-size: 12px;
+      color:@text-color;
+      background-color: @inset-panel-background-color;
+      ul{
+        overflow: scroll;
+      }
+    }
   }
 }
 
